--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         <div class="u-container-layout u-container-layout-1">
           <h2 class="u-text u-text-default u-text-1">Missão</h2>
           <p class="u-text u-text-default u-text-grey-50 u-text-2">Nós da AJ Rede de Construção temos um objetivo com
-            você que procura a reforma certa. O nosso maior compromisso é com vocês de levar um melhor conforto para seu
-            lar, sua empresa, condômino etc. Nossa maior missão e ver o cliente satisfeito não sou no serviço mas também
-            com a qualidade da prestação do serviço</p>
+            você que procura a reforma certa. O nosso maior compromisso é de levar um melhor conforto para seu
+            lar, sua empresa, condômino etc. Nossa maior missão é ver o cliente satisfeito não só no serviço, mas também
+            com a qualidade da prestação do serviço.</p>
         </div>
       </div>
     </div>
